@@ -1,5 +1,7 @@
 *SVN*
 
+* Git SCM module [Garry Dolley, Geoffrey Grosenbach, Scott Chacon]
+
 * Use the --password switch for subversion by default, but add :scm_prefer_prompt variable (defaults to false) [Jamis Buck]
 
 
